# Image-Compression

./: CMakeLists.txt  main.cpp
include/: compression.hpp
src/: compression.cpp  main.cpp
